--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.9.0",
         "livewire/livewire": "^4.0",
+        "livewire/volt": "^1.10",
         "spatie/laravel-permission": "^6.24"
     },
     "require-dev": {
